# qcit

./: CMakeLists.txt
src/: CMakeLists.txt
src/qcit_core/: CMakeLists.txt  camera.cpp  camera.h  defines.h  image_base.h  image_exif.cpp  image_exif.h
src/qcit_math/: CMakeLists.txt  algo.h  bezier_curve.cpp  bezier_curve.h  defines.h  functions.h  matrix.h  matrix_qr.h  matrix_svd.h  matrix_tools.h  octree_tools.h  permute.h  plane.h  quaternion.h  transform.h  vector.h
src/qcit_util/: CMakeLists.txt  aligned_allocator.h  aligned_memory.h  arguments.cpp  arguments.h  defines.h  exception.h  file_system.cpp  file_system.h  frame_timer.h  ini_parser.cpp  ini_parser.h  logging.h  strings.h  system.cpp  system.h  timer.h  tokenizer.h
src_bin/: CMakeLists.txt
src_bin/qcit02_feature_matching/: qcit02_feature_matching.cpp
src_bin/qcit03_incremental_sfm/: CMakeLists.txt
src_bin/qcit04_dense_reconstruction/: CMakeLists.txt
src_bin/qcit05_mesh/: CMakeLists.txt  qcit05_mesh.cpp
src_bin/qcit06_texturing/: CMakeLists.txt  qcit06_texturing.cpp
